updated README.md with details for ansible galaxy documentation
[ci skip]